starting my about me page

--- a/index.html
+++ b/index.html
@@ -1,8 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-    </head>
-    <title-About Me</title>
-    </title-About>
+    </title>About Me</title>
 </head>
+<body>
+    <h1>Catalan</h1>
+
+    <h2>Favorite Food</h2>
+
+    <p> Here is a list of my favorites foods</p>
+<ul>
+    <li>Pizza</li>
+    <li>Chips</li>
+    <li>Fries</li>
+    <li>Sandwhich</li>
+
+    <h2>Favorite Movies</h2>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae labore deleniti ipsum unde, excepturi quos voluptatibus quam maxime consequatur officia natus quas totam repellat animi sit voluptas ut libero molestiae odit dolorum quasi iusto, suscipit mollitia? Vitae aliquam tempora accusamus enim inventore veniam incidunt vero amet rerum quibusdam consequatur consectetur eligendi, ducimus porro molestiae in? Minima ab aperiam quo corporis modi. Fugit iste magni sequi omnis, minima, eaque quam labore quidem repellendus corrupti eligendi error sint! Temporibus eum sunt non quam et corporis magni distinctio perspiciatis quo libero reiciendis necessitatibus sint aliquid, ipsam neque placeat voluptas explicabo labore fugit sequi!</p>
+
+<ol>
+    <li>V For Vendetta</li>
+    <li>Mary & Max</li>
+    <li>The Cat Returns</li>
+</ol>
+    <h2>Favorite Animals</h2>
+<ul>
+    <li>Dogs</li>
+    <li>Cats</li>
+    <li>Birds</li>
+</ul>
+
+<h2>Favorite Drinks</h2>
+
+<p>Here are some of my favorites</p>
+
+<div>
+    <h3>Pepsi</h3>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Lori_Province%2C_Armenia_-_panoramio_%284%29.jpg/800px-Lori_Province%2C_Armenia_-_panoramio_%284%29.jpg" alt="Pepsi Drink">
+</div>
+<p>To learn more about Pepsi follow this link: <a href="https://www.youtube.com/watch?v=Hso1YkdmcHA">read about Pepsi</a>
+</p>
+</body>
+
 </html>
