updated about me

--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html>
 <head>
     </title>About Me</title>
+<style>
+    body {background-color: rgb(250, 226, 193);}
+div {border-style: solid;}
+</style>
 </head>
 <body>
     <h1>Catalan</h1>
 
     <h2>Favorite Food</h2>
 
-    <p> Here is a list of my favorites foods</p>
+    <p> Here is a list of my <i>favorites</i> foods.</p>
 <ul>
     <li>Pizza</li>
     <li>Chips</li>
