--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ div {border-style: solid;}
 
     <h2>Favorite Food</h2>
 
-    <p> Here is a list of my <i>favorites</i> foods.</p>
+    <p> Here is a list of my <i>favorite</i> foods.</p>
 <ul>
     <li>Pizza</li>
     <li>Chips</li>
